--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
    <article>
     <header>
     <h2>The Basic Language of the Web: HTML</h2>
-    <img src="laura-jones.jpg" alt="Headshot of laura Jones" width="50">
+    <img src="img/laura-jones.jpg" alt="Headshot of laura Jones" width="50">
     <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
-    <img src="post-img.jpg" alt="HTML code on a screen" width="500">
+    <img src="img/post-img.jpg" alt="HTML code on a screen" width="500">
     </header>
 
     <p>
